# shuffle4g

./: .gitignore  GOAL.md  IPodShuffleManager.spec  README.md  Shuffle4G.spec  main.py  pyproject.toml  shuffle4g.spec
.github/workflows/: release.yml
build_assets/: IPodShuffleManager.spec
ipodshuffle/: core.py  gui.py
scripts/: shufflewatch.py
shuffle4g/: gui.py
src/Shuffle4G.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shuffle4g/: __init__.py  cli.py  gui.py  utils.py
src/shuffle4g/assets/icons/: icon.icns
